# routes/index.js
@@ -1,17 +1,22 @@
 const router = require("express").Router();
-const passport = require('passport');
+const passport = require("passport");
 
-router.use("/", require('./swagger'));
-router.use('/courses', require('./courses'));
-router.use('/instructors', require('./instructors'));
 
-router.get('/login', passport.authenticate('github'), (req, res) => {});
+router.use("/", require("./swagger"));
 
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err) {
-        if (err) { return next(err); }
-        res.redirect('/');
-    });
+
+router.use("/courses", require("./courses"));
+router.use("/instructors", require("./instructors"));
+router.use("/students", require("./students"));
+
+
+router.get("/login", passport.authenticate("github"));
+
+router.get("/logout", (req, res, next) => {
+  req.logout(err => {
+    if (err) return next(err);
+    res.redirect("/");
+  });
 });
 
 module.exports = router;
